--- a/templates/static/index.html
+++ b/templates/static/index.html
@@ -34,26 +34,29 @@ var H = canvas.height = window.innerHeight-50;
 
 function sendJSONXMLHTTPRequest(url, objects, callback) {
     var xhr = new XMLHttpRequest();
-    xhr.onreadystatechange = function () {
-        if (xhr.readyState==4) {
-            try {
-                if (xhr.status==200) {
-                    //XXX: parse some JSON from the request!
-                    //XXX: Pass the data to the callback!
-                }
-            } 
-            catch(e) {
-                alert('Error: ' + e.name);
-            }
-        }
-    };
-    //XXX: POST to a URL
-    //XXX: set the mimetype and the accept headers!
+     xhr.onreadystatechange = function () {
+         if (xhr.readyState==4) {
+             try {
+                 if (xhr.status==200) {
+                     //XXX: parse some JSON from the request!
+                     //XXX: Pass the data to the callback!
+                      console.log(xhr.getAllResponseHeaders());
+                 }
+             } 
+             catch(e) {
+                 alert('Error: ' + e.name);
+             }
+         }
+     };
+
+    // XXX: POST to a URL
+    // XXX: set the mimetype and the accept headers!
     // Remember to use application/json !
 }
 
 
 world = {};
+serverURL = "http://127.0.0.1:5000"
 
 //XXX: TODO Make this prettier!
 function drawCircle(context,entity) {
@@ -72,7 +75,7 @@ function drawCircle(context,entity) {
 
 function prepEntity(entity) {
     if (!entity["colour"]) {
-        entity["colour"] = "#FF0000";
+        entity["colour"] = "#FFFFFF";
     }
     if (!entity["radius"]) {
         entity["radius"] = 50;
@@ -138,7 +141,24 @@ function addEntity(entity, data) {
     world[entity] = data;
     drawNextFrame(); // (but should we?)
     //XXX: Send a XHTML Request that updates the entity you just  modified!
+    console.log(`${serverURL}/entity/${entity}`);
+    let sendEntityToServer = async () => {
+        console.log(`${serverURL}/entity/${entity}`)
+        let response = await fetch(
+            `${serverURL}/entity/${entity}`, {
+                method: "POST",
+                headers: {
+                    "Content-Type" : "application/json"
+                },
+                body : JSON.stringify(data),
+            }
+        )
 
+
+        console.log(response);
+    }
+
+    sendEntityToServer();
 }
 
 var counter = 0;
@@ -255,13 +275,14 @@ mouse.mouseuppers.push(function(x,y,clicked,e) {
 });
 
 mouse.mousedraggers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'green',
+    addEntityWithoutName({'x':x,'y':y,'colour':'#ffffff',
                           'radius':10});
 });
 
 
 function update() {
     //XXX: TODO Get the world from the webservice using a XMLHTTPRequest
+    sendJSONXMLHTTPRequest("http://127.0.0.1:5000")
     drawFrame();
 }
 
